retrieveNA31/objects/Core_IPS_Product_Organization_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Core_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00eq0000000Lygy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Organization_Admins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Primary_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Product_Organization__c</fullName>
        <label>Support Org</label>
        <referenceTo>Core_IPS_Product_Organization__c</referenceTo>
        <relationshipLabel>Support Org Admins</relationshipLabel>
        <relationshipName>Product_Organization_Admins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Support Org Admin</label>
    <nameField>
        <displayFormat>Admin - {0000}</displayFormat>
        <label>Support Org Admin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Org Admins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Supp_Org_Admin_User_Type</fullName>
        <active>true</active>
        <description>Ensures user type of &quot;User&quot; only can be added as a Primary Admin, as opposed to Customer Portal or Partner Portal users.</description>
        <errorConditionFormula>ISPICKVAL( Core_Admin__r.UserType , &apos;User&apos;)</errorConditionFormula>
        <errorDisplayField>Core_Admin__c</errorDisplayField>
        <errorMessage>To configure a Support Org Admin, select user type of &quot;User&quot; only.</errorMessage>
    </validationRules>
</CustomObject>